# Enhanced-Momentum

./: .gitignore  README.md
backtests/enhanced_momentum/: pyproject.toml
backtests/enhanced_momentum/backtests/: 0_Unhedged_Momentum.ipynb  1_Momentum.ipynb  2_First_Backtest.ipynb
backtests/enhanced_momentum/enhanced_momentum/: run.py
backtests/enhanced_momentum/enhanced_momentum/config/: project_experiment_config.py  project_trading_config.py
backtests/enhanced_momentum/enhanced_momentum/strategies/: systematic_momentum.py
